# slinker

./: CMakeLists.txt  README.md  README.txt  solving_rules_4.txt
src/: App.cpp  App.h  DrawSlinkerGrid.h  IDs.h  MainFrame.cpp  MainFrame.h  RuleDepictionDialog.cpp  RuleDepictionDialog.h  SlinkerGrid.cpp  SlinkerGrid.h  main.cpp  next_combination.h
tags/release-0.1/: README.txt  solving_rules_3.txt
tags/release-0.1/src/: App.cpp  DrawSlinkerGrid.cpp  SlinkerGrid.h  solving_rules_3.h  solving_rules_4.h  wxWidgets_standard_headers.h
trunk/: CMakeLists.txt  README.txt  growth_rules.txt  solving_rules_5.txt
trunk/src/: App.cpp  DrawSlinkerGrid.cpp  IDs.h  IndexedComparison.h  MainFrame.cpp  MainFrame.h  RuleDepictionDialog.cpp  RuleDepictionDialog.h  SlinkerGrid.cpp  SlinkerGrid.h  main.cpp
wiki/: ChangeList.wiki  Introduction.wiki  MacBuild.wiki
